--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Project name</title>
-    <link href="/assets/css/vendors.f49a702dd836e73045e6.css" rel="stylesheet">
-    <link href="/assets/css/app.84cf1fa8332fa985b081.css" rel="stylesheet">
+    <link href="assets/css/vendors.f49a702dd836e73045e6.css" rel="stylesheet">
+    <link href="assets/css/app.84cf1fa8332fa985b081.css" rel="stylesheet">
   </head>
   <body>
   <!-- Project begin -->
@@ -830,7 +830,7 @@
     </div>
   <!-- End begin -->
   <noscript><p>Ваш браузер не поддерживает скрипты!</p></noscript>
-  <script src="/assets/js/vendors.5d70a510736cbb1e34b1.js"></script>
-  <script src="/assets/js/app.7a529538d2a6d96b4b2e.js"></script>
+  <script src="assets/js/vendors.5d70a510736cbb1e34b1.js"></script>
+  <script src="assets/js/app.7a529538d2a6d96b4b2e.js"></script>
   </body>
 </html>
