--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Project name</title>
-    <link href="assets/css/vendors.f49a702dd836e73045e6.css" rel="stylesheet">
-    <link href="assets/css/app.84cf1fa8332fa985b081.css" rel="stylesheet">
+    <link href="assets/css/vendors.f49a702dd836e73045e6.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/app.84cf1fa8332fa985b081.css" rel="stylesheet" type="text/css">
   </head>
   <body>
   <!-- Project begin -->
