--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Project name</title>
     <link href="assets/css/vendors.f49a702dd836e73045e6.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/app.84cf1fa8332fa985b081.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/app.6fbfd0d4d0b649733782.css" rel="stylesheet" type="text/css">
   </head>
   <body>
   <!-- Project begin -->
@@ -520,7 +520,7 @@
                       <div class="catalog__col">
                         <div class="card-product">
                           <a href="#extendedCardProduct" class="card-product__image popup-link">
-                            <img src="assets/img/main-picture1.jpg" alt="img">
+                            <img src="assets/img/catalogPart.png" alt="img" loading="lazy">
                           </a>
                           <div class="card-product__body">
                             <h4 class="card-product__title">
@@ -529,15 +529,15 @@
                             <p class="card-product__desc">
                               Чудесный яркий букет придаст особое волшебство моменту. Глядя на эти цветы, хочется ощутить их неповторимый аромат и окунуться в атмосферу
                             </p>
-                            <div class="card-product__footer">
-                              <div class="card-product__price">
-                                <span>1790&nbsp;₽</span>
-                                <span class="card-product__price-old">2790&nbsp;₽</span>
-                              </div>
-                              <a href="order.html" class="card-product__btn btn">
-                                Заказать
-                              </a>
+                          </div>
+                          <div class="card-product__footer">
+                            <div class="card-product__price">
+                              <span>1790&nbsp;₽</span>
+                              <span class="card-product__price-old">2790&nbsp;₽</span>
                             </div>
+                            <a href="order.html" class="card-product__btn btn">
+                              Заказать
+                            </a>
                           </div>
                         </div>
                       </div>
@@ -566,6 +566,52 @@
                 </p>
             </div>
           </div>
+          </div>
+        </section>
+        <section class="subscription">
+          <div class="container">
+            <div class="subscription__row">
+              <div class="subscription__col">
+                <h3 class="subscription__col-title">
+                  МЫ В СОЦ. СЕТЯХ:
+                </h3>
+                <div class="subscription__col-body">
+                  <div class="social-network">
+                    <a href="https://www.facebook.com/" target="_blank" class="social-network__item">
+                      <svg width="16" height="33" viewBox="0 0 16 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M10.1269 32.6393V16.3178H14.6324L15.2295 10.6933H10.1269L10.1346 7.87813C10.1346 6.41117 10.274 5.62514 12.381 5.62514H15.1976V0H10.6915C5.27892 0 3.37384 2.72849 3.37384 7.31696V10.6939H0V16.3184H3.37384V32.6393H10.1269Z" fill="white"/>
+                      </svg>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="social-network__item">
+                      <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0015 0C11.6561 0 11.1108 0.0190002 9.4041 0.0966677C7.70075 0.174668 6.53807 0.444338 5.52072 0.840009C4.46838 1.24868 3.5757 1.79535 2.68636 2.68503C1.79635 3.57437 1.24968 4.46705 0.839675 5.51906C0.443005 6.53673 0.173002 7.69975 0.0963343 9.40243C0.0200002 11.1091 0 11.6548 0 16.0002C0 20.3455 0.0193335 20.8892 0.0966677 22.5959C0.175002 24.2993 0.444671 25.4619 0.840009 26.4793C1.24901 27.5316 1.79569 28.4243 2.68536 29.3136C3.57437 30.2036 4.46705 30.7517 5.51872 31.1603C6.53673 31.556 7.69975 31.8257 9.40276 31.9037C11.1094 31.9813 11.6545 32.0003 15.9995 32.0003C20.3452 32.0003 20.8889 31.9813 22.5956 31.9037C24.2989 31.8257 25.4629 31.556 26.4809 31.1603C27.533 30.7517 28.4243 30.2036 29.3133 29.3136C30.2033 28.4243 30.75 27.5316 31.16 26.4796C31.5533 25.4619 31.8233 24.2989 31.9033 22.5962C31.98 20.8896 32 20.3455 32 16.0002C32 11.6548 31.98 11.1094 31.9033 9.40276C31.8233 7.69941 31.5533 6.53674 31.16 5.51939C30.75 4.46705 30.2033 3.57437 29.3133 2.68503C28.4233 1.79502 27.5333 1.24835 26.4799 0.840009C25.4599 0.444338 24.2966 0.174668 22.5932 0.0966677C20.8866 0.0190002 20.3432 0 15.9965 0H16.0015ZM14.5662 2.88339C14.9922 2.88273 15.4676 2.88339 16.0016 2.88339C20.2736 2.88339 20.78 2.89873 22.467 2.9754C24.027 3.04673 24.8737 3.3074 25.4377 3.5264C26.1843 3.8164 26.7167 4.16307 27.2764 4.72308C27.8364 5.28309 28.183 5.81643 28.4737 6.5631C28.6927 7.12644 28.9537 7.97311 29.0247 9.53313C29.1014 11.2198 29.118 11.7265 29.118 15.9965C29.118 20.2666 29.1014 20.7732 29.0247 22.4599C28.9534 24.0199 28.6927 24.8666 28.4737 25.43C28.1837 26.1766 27.8364 26.7083 27.2764 27.268C26.7163 27.828 26.1847 28.1747 25.4377 28.4647C24.8743 28.6847 24.027 28.9447 22.467 29.016C20.7803 29.0927 20.2736 29.1093 16.0016 29.1093C11.7292 29.1093 11.2229 29.0927 9.53617 29.016C7.97615 28.944 7.12948 28.6833 6.56514 28.4643C5.81846 28.1743 5.28512 27.8277 4.72512 27.2676C4.16511 26.7076 3.81844 26.1756 3.52777 25.4286C3.30877 24.8653 3.04777 24.0186 2.97677 22.4586C2.9001 20.7719 2.88477 20.2652 2.88477 15.9925C2.88477 11.7198 2.9001 11.2158 2.97677 9.52913C3.0481 7.96911 3.30877 7.12244 3.52777 6.55843C3.81778 5.81176 4.16511 5.27842 4.72512 4.71841C5.28512 4.15841 5.81846 3.81174 6.56514 3.52107C7.12914 3.30107 7.97615 3.04106 9.53617 2.9694C11.0122 2.90273 11.5842 2.88273 14.5662 2.87939V2.88339ZM24.5423 5.5401C23.4823 5.5401 22.6223 6.3991 22.6223 7.45945C22.6223 8.51946 23.4823 9.37947 24.5423 9.37947C25.6023 9.37947 26.4624 8.51946 26.4624 7.45945C26.4624 6.39944 25.6023 5.53943 24.5423 5.53943V5.5401ZM16.0014 7.78345C11.4637 7.78345 7.78467 11.4625 7.78467 16.0002C7.78467 20.5379 11.4637 24.2153 16.0014 24.2153C20.5391 24.2153 24.2168 20.5379 24.2168 16.0002C24.2168 11.4625 20.5388 7.78345 16.0011 7.78345H16.0014ZM16.0016 10.6667C18.947 10.6667 21.335 13.0544 21.335 16.0001C21.335 18.9455 18.947 21.3335 16.0016 21.3335C13.0559 21.3335 10.6682 18.9455 10.6682 16.0001C10.6682 13.0544 13.0559 10.6667 16.0016 10.6667Z" fill="black"/>
+                      </svg>
+                    </a>
+                    <a href="https://twitter.com/" target="_blank" class="social-network__item">
+                      <svg width="30" height="24" viewBox="0 0 30 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M14.1015 6.38438L14.1645 7.42244L13.1152 7.29533C9.29608 6.80808 5.95956 5.15564 3.12667 2.3804L1.7417 1.00337L1.38497 2.02025C0.629531 4.28706 1.11217 6.68097 2.686 8.29103C3.52538 9.1808 3.33652 9.30791 1.88859 8.77829C1.38497 8.60881 0.944297 8.4817 0.902328 8.54525C0.755438 8.69355 1.25906 10.6214 1.65777 11.384C2.20336 12.4433 3.31553 13.4814 4.53263 14.0957L5.56086 14.583L4.34377 14.6042C3.16864 14.6042 3.12667 14.6254 3.25258 15.0702C3.67227 16.4473 5.33003 17.909 7.17666 18.5446L8.47769 18.9895L7.34453 19.6674C5.66578 20.6419 3.69325 21.1927 1.72072 21.2351C0.776422 21.2563 0 21.341 0 21.4046C0 21.6164 2.56009 22.8028 4.04999 23.2689C8.51966 24.6459 13.8287 24.0527 17.8157 21.7012C20.6486 20.0275 23.4815 16.7015 24.8035 13.4814C25.517 11.7654 26.2305 8.62999 26.2305 7.12585C26.2305 6.15134 26.2934 6.02423 27.4686 4.85905C28.161 4.18113 28.8116 3.43965 28.9375 3.2278C29.1473 2.82529 29.1263 2.82529 28.0561 3.18543C26.2724 3.82098 26.0206 3.73624 26.902 2.78292C27.5525 2.10499 28.3289 0.876262 28.3289 0.516116C28.3289 0.45256 28.0141 0.558486 27.6574 0.749151C27.2797 0.961002 26.4403 1.27878 25.8108 1.46944L24.6776 1.82959L23.6494 1.13048C23.0828 0.749151 22.2854 0.32545 21.8657 0.19834C20.7955 -0.098251 19.1587 -0.0558809 18.1935 0.28308C15.5704 1.23641 13.9126 3.69387 14.1015 6.38438Z" fill="white"/>
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="subscription__col">
+                <h3 class="subscription__col-title">
+                  ПОДПИШИТЕСЬ
+                </h3>
+                <p class="subscription__col-desc">
+                  и получите промо-код на скидку 10%
+                </p>
+                <div class="subscription__col-body">
+                  <form action="" method="">
+                    <input type="text" class="base-input" placeholder="Ваш e-mail" name="e-mail" data-valid = "e-mail">
+                    <button class="subscription__btn btn">
+                      Добавить
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </div>
@@ -733,13 +779,13 @@
               <div class="extended-card-product__row">
                 <div class="extended-card-product__col">
                   <div class="extended-card-product__img">
-                    <img src="assets/img/main-picture3.jpg" alt="img">
+                    <img src="assets/img/catalogPart9.jpg" alt="img" loading = "lazy">
                   </div>
                 </div>
                 <div class="extended-card-product__col">
                   <div class="extended-card-product__body">
                     <h3 class="extended-card-product__col-title">
-                      Общая характеристика букетов:
+                      Букеты
                     </h3>
                     <div class="extended-card-product__option">
                       <h4 class="extended-card-product__option-title">
@@ -831,6 +877,6 @@
   <!-- End begin -->
   <noscript><p>Ваш браузер не поддерживает скрипты!</p></noscript>
   <script src="assets/js/vendors.5d70a510736cbb1e34b1.js"></script>
-  <script src="assets/js/app.7a529538d2a6d96b4b2e.js"></script>
+  <script src="assets/js/app.ef19c99db10e28f11aaa.js"></script>
   </body>
 </html>
